--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,4 @@
 html,body{
-    display:  inline;
-    justify-content: center;
-    position: absolute ;
-    background-color: gray;
+    max-width: max-content;
+    margin: auto;
 }
